--- a/events/templates/events/my_events.html
+++ b/events/templates/events/my_events.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block content %}
-    <h2 class="mb-3">📋 Мои мероприятия</h2>
+    <h2 class="mb-3"> Мои мероприятия</h2>
 
     <a href="{% url 'event-create' %}" class="btn btn-primary mb-3">Создать новое мероприятие</a>
 
