--- a/users/templates/users/leaderboard.html
+++ b/users/templates/users/leaderboard.html
@@ -1,9 +1,9 @@
 {% extends 'events/base.html' %}
-{% block title %}🏆 Таблица лидеров{% endblock %}
+{% block title %}Таблица лидеров{% endblock %}
 
 {% block content %}
 <div class="container">
-    <h2 class="mb-4">🏆 Лидеры по баллам</h2>
+    <h2 class="mb-4">Лидеры по баллам</h2>
 
     {% if leaders %}
         <table class="table table-striped table-hover">
