--- a/users/templates/users/prize_catalog.html
+++ b/users/templates/users/prize_catalog.html
@@ -2,7 +2,7 @@
 {% block title %}Каталог призов{% endblock %}
 
 {% block content %}
-<h2 class="mb-4">🎁 Каталог призов</h2>
+<h2 class="mb-4">Каталог призов</h2>
 
 <div class="row">
     {% for prize in prizes %}
